--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,13 +1,21 @@
-textarea.file{
+pre.file{
     width: 100%;
-    border: none;
-    height: 200px;
+    border: 1px solid #bbbbbb;
+    height: 180px;
     font-size: 12px;
-    color: #00aa88;
     font-family: monospace;
+    background: white;
+    padding: 10px;
+
 }
 .response .alert{
     margin: .5rem 0;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     padding: .4rem .6rem;
+}
+.response .alert code{
+    color: whitesmoke;
+    padding: 4px 10px;
+    border-radius: 4px;
+    background: #050505;
 }
